update user status
